# piptastic

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.technical.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
archive/: PIPRU.py
docs/superpowers/plans/: 2026-05-25-piptastic-v0.2.md  2026-05-26-piptastic-bootstrap-stats.md
docs/superpowers/specs/: 2026-05-25-piptastic-v0.2-design.md  2026-05-26-piptastic-bootstrap-stats-design.md
src/piptastic/: __init__.py  __main__.py  analysis.py  bootstrap.py  cli.py  discovery.py  logging.py  models.py  parsing.py  pypi.py  stats.py  suppressions.py  update.py  vulns.py
src/piptastic/render/: __init__.py  json_out.py  sarif.py  terminal.py
tests/: conftest.py  test_analysis.py  test_bootstrap.py  test_cli.py  test_discovery.py  test_models.py  test_parsing.py  test_pypi.py  test_render_json.py  test_render_sarif.py  test_render_terminal.py  test_stats.py  test_suppressions.py  test_update.py  test_vulns.py
tests/fixtures/mixed/: pyproject.toml
tests/fixtures/oddly_named_runtime/runtime_env_42/: requirements.txt
tests/fixtures/pdm_lock_project/: pyproject.toml
tests/fixtures/pipfile_project/: Pipfile
tests/fixtures/poetry_lock_project/: pyproject.toml
tests/fixtures/pyproject_pep621/: pyproject.toml
tests/fixtures/pyproject_poetry/: pyproject.toml
tests/fixtures/pyproject_poetry_edges/: pyproject.toml
tests/fixtures/req_only/: dev-requirements.txt  requirements.txt
tests/fixtures/uv_lock_project/: pyproject.toml
