[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "piptastic"
version = "0.2.0"
description = "Audit Python dependency posture across all projects in a tree."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "boredchilada" }]
keywords = ["pip", "requirements", "dependencies", "audit", "watchtower"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "packaging>=23.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/boredchilada/piptastic"
Source = "https://github.com/boredchilada/piptastic"
Issues = "https://github.com/boredchilada/piptastic/issues"

[project.scripts]
piptastic = "piptastic.cli:main"
ptc = "piptastic.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/piptastic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
